log
Tue 26 Sep 2023 12:57:01 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
11d2111
Tue 26 Sep 2023 01:04:44 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
12198b5
Tue 26 Sep 2023 01:27:09 AM UTC: 
 heap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:46: error: comparison between pointer and integer [-Werror]
   38 |   if (pq == NULL || data == NULL || priority == NULL){
      |                                              ^~
cc1: all warnings being treated as errors
Compilation failed
930cd81
